# math_mentor_agent

./: .gitignore  README.md
backend/: .env.example  Dockerfile  openapi.yaml  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: __init__.py  analytics.py  analyzer.py  orchestrator.py  practice.py  student_model.py  teaching.py
backend/app/db/: client.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  agent.py  attempt.py  common.py  exercise.py  mastery.py  message.py  session.py  student.py
backend/app/repositories/: __init__.py  agent_memory.py  attempts.py  base.py  exercises.py  mastery_events.py  messages.py  problem_library.py  sessions.py  students.py
backend/app/services/: auth.py  deepseek_client.py  deepseek_exceptions.py  deepseek_service.py  llm_factory.py  llm_protocol.py  mastery.py  session_service.py  vertex_client.py  vertex_exceptions.py  vertex_health.py  vertex_prompts.py  vertex_service.py  vertex_types.py
backend/app/utils/: coerce.py  leak_heuristic.py  llm_error.py  locale.py  pedagogy.py  tracing.py
backend/scripts/: deepseek_functional_test.py  deepseek_practice_smoke.py  deepseek_test_report.json  exercises_api_smoke.py  tutor_chat_continuity_test.py  tutor_chat_test_report.json
backend/tests/: test_analyzer_schema.py  test_leak_heuristic.py  test_locale.py  test_message_trace.py  test_orchestrator.py  test_pedagogy.py  test_student_model.py  test_teaching.py  test_teaching_fallback.py
backend/tests/golden/: leak_cases.json  test_leak_golden.py
(+67 files in other folders)
