[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mathmentor-backend"
version = "1.0.0"
description = "MathMentor — Socratic Calculus Tutor API"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # MongoDB
    "motor>=3.4.0",
    "pymongo>=4.7.0",

    # Google Cloud / Vertex AI
    "google-cloud-aiplatform>=1.58.0",
    "google-auth>=2.30.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "google-auth-httplib2>=0.2.0",

    # HTTP client
    "httpx>=0.27.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "mongomock-motor>=0.0.21",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
